Jumpを追加。タイトル名前を変更。

--- a/5142_チーム制作.vcxproj.filters
+++ b/5142_チーム制作.vcxproj.filters
@@ -111,5 +111,8 @@
     <ClInclude Include="C:\KamataEngine\DirectXGame\base\StringUtility.h">
       <Filter>KamataEngine\Include</Filter>
     </ClInclude>
+    <ClInclude Include="Jump.h">
+      <Filter>KamataEngine</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
