--- a/5142_チーム制作.vcxproj.filters
+++ b/5142_チーム制作.vcxproj.filters
@@ -38,6 +38,12 @@
     <ClCompile Include="C:\KamataEngine\DirectXGame\base\StringUtility.cpp">
       <Filter>KamataEngine\Source</Filter>
     </ClCompile>
+    <ClCompile Include="mystruct.cpp">
+      <Filter>KamataEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="jump.cpp">
+      <Filter>KamataEngine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C:\KamataEngine\DirectXGame\audio\Audio.h">
@@ -111,8 +117,7 @@
     <ClInclude Include="C:\KamataEngine\DirectXGame\base\StringUtility.h">
       <Filter>KamataEngine\Include</Filter>
     </ClInclude>
-    <ClInclude Include="Jump.h">
-      <Filter>KamataEngine</Filter>
-    </ClInclude>
+    <ClInclude Include="mystruct.h" />
+    <ClInclude Include="jump.h" />
   </ItemGroup>
 </Project>
